added code to add index to vector store

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,11 @@
 flask
 python-dotenv
 flask_cors
+langchain
+langchain_chroma
+langchain_community
+langchain_core
+langchain_openai
+pymupdf
+azure-search-documents
+azure-identity
